--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@remotion/renderer": "^3.0.0",
     "eslint": "^8.14.0",
     "prettier": "^2.2.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-native-web": "^0.16.3",
     "remotion": "^3.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@types/react": "^18.0.6",
+    "@types/react": "^18.0.8",
+    "@types/react-native": "^0.67.6",
+    "@types/styled-components": "^5.1.25",
     "@types/web": "^0.0.61"
   }
 }
